Bugfix #477 Fix snapshot time didn't align issue
This patch align the create time in snapshot for IE specially since IE
is using time format different from firefox.

--- a/ui/css/theme-default/guest-edit.css
+++ b/ui/css/theme-default/guest-edit.css
@@ -141,7 +141,7 @@
 }
 
 .guest-edit-snapshot .created {
-    width: 250px;
+    width: 270px;
 }
 
 #form-guest-edit-storage .cell.dev {
